# orbit

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  要求.txt
orbit/: __init__.py  __main__.py  background.py  bus.py  cli.py  compress.py  core.py  manager.py  skills.py  subagent.py  task_mgr.py  todo.py  tools.py
src/orbit/: __init__.py  bus.py  cli.py  core.py  manager.py  tools.py
