[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "orbit"
version = "0.1.0"
description = "轻量本地 coding agent — 终端里的仓库助手，支持队友代理、任务跟踪、后台执行、技能加载与对话压缩"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Orbit Team"},
]
keywords = ["ai", "agent", "teams", "llm", "orbit", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/orbit/orbit"
Repository = "https://github.com/orbit/orbit"

[project.scripts]
orbit = "orbit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]
